--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Darren Xu</title>
+    <link rel="stylesheet" href="libs/font-awesome/css/font-awesome.min.css">
+
 </head>
 
 <body>
